src/components/Navbar/Navbar.module.css
.navbar {
  height: 44px;
  padding: 12px;
  font-size: 18px;
  letter-spacing: 2px;
  background-color: #fbecd0;
  display: flex;
  align-items: center;
  justify-content: center;
  position: sticky;
  top: 0;
  width: 100vw;
}

.links {
  display: flex;
  text-transform: uppercase;
  font-weight: 600;
}

.links li {
  padding: 0 8px;
  text-align: center;
  border-right: 0.8px solid rgb(184, 184, 184);
}

.links a {
  color: black;
  text-decoration: none;

}

.links a:hover {
  color: #ED553B;
}

.links li:last-child  {
  border: none;
}

#active {
  color: #ED553B;
}

